log
Thu, Mar 27, 2025  8:13:23 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  8:29:33 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e253eb4
Thu, Mar 27, 2025  8:29:55 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d4116f3
Thu, Mar 27, 2025  8:37:04 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
abc2936
Thu, Mar 27, 2025  8:44:06 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
331129b
